Cardview with penta preview to choose pentatonic
Signed-off-by: OroshiX <oroshix@users.noreply.github.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -94,5 +94,6 @@
     <string name="hard">Hard</string>
     <string name="very_hard">Very hard</string>
     <string name="dialog_remove_message">You want to remove this character:</string>
-    <string name="menu_remove_letter">Remove letter...</string>
+    <string name="menu_remove_letter">Remove letter…</string>
+    <string name="default_title">Titre</string>
 </resources>
