--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -96,4 +96,5 @@
     <string name="dialog_remove_message">You want to remove this character:</string>
     <string name="menu_remove_letter">Remove letter…</string>
     <string name="default_title">Titre</string>
+    <string name="share">Share</string>
 </resources>
