--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="undo">Undo</string>
     <string name="redo">Redo</string>
     <string name="reset">Reset</string>
-    <string name="replace">Replace letter with...</string>
+    <string name="replace">Replace letter with…</string>
     <string name="title_replace_dialog">Choose what to replace</string>
     <string name="with">with</string>
     <string name="replace_text">Replace</string>
