--- a/Android-app/app/src/main/res/values/strings.xml
+++ b/Android-app/app/src/main/res/values/strings.xml
@@ -98,5 +98,5 @@
     <string name="default_title">Titre</string>
     <string name="share">Share</string>
     <string name="logo_pentatonic">Pentatonic</string>
-    <string name="logo_nimoroshix">nim0roshix</string>
+    <string name="logo_nimoroshix">by nim0roshix</string>
 </resources>
